# FH-STECE2023

./: .gitignore  README.rst
doc/: state-machine.plantuml
src/: CMakeLists.txt
src/door/: CMakeLists.txt  adc-ads1115.cpp  adc-ads1115.h  door.cpp  door.h  pressure-sensor-bmp280.cpp  pressure-sensor-bmp280.h  structs.h  timer-handler.cpp  timer-handler.h
src/door/analog_stuff/: CMakeLists.txt
src/door/analog_stuff/sensor/: analog-sensor-event-generator.cpp  analog-sensor-event-generator.h  analog-sensor-mock.cpp  analog-sensor-mock.h  analog-sensor.h
src/door/input_output_switch/: CMakeLists.txt
src/door/input_output_switch/input/: CMakeLists.txt  input-edge-event.h  input-switch-gpio-sysfs.h  input-switch-mock.cpp  input-switch-mock.h  input-switch.h  inputs.cpp  inputs.h
src/door/input_output_switch/output/: CMakeLists.txt  output-switch-gpio-sysfs.cpp  output-switch-gpio-sysfs.h  output-switch-mock.cpp  output-switch-mock.h  output-switch.h  outputs.cpp  outputs.h
src/door/motor/: motor-mock.cpp  motor-mock.h  motor-stepper.h  motor.h  motorLED.cpp  motorLED.h
src/door/utilities/: CMakeLists.txt  i2c.cpp  i2c.h  periodic-timer.cpp  periodic-timer.h
tests/: CMakeLists.txt  adc-ads1115-test.cpp  adc-mock-tests.cpp  bmp280-test.cpp  event-edge-detector-tests.cpp  hysteresis_hw_test.cpp  input-edge-event-test.cpp  input-output-switch-gpio-sysfs-tests.cpp  inputs-tests.cpp  motor-tests.cpp  outputs-tests.cpp
